tests/script/negative/adt/empty_match.s
type T { C }

@initial
run(T arg) {
  case(arg) { }
}
